added redis caching

--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
     <PackageReference Include="SQLite" Version="3.13.0" />
   </ItemGroup>
 
