--- a/MovieProject/appsettings.Development.json
+++ b/MovieProject/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=movieDB.db"
+  },
+  "Caching": {
+    "RedisConnection": "localhost:6379"
   }
 }
